Fixing Paddings jumps after sub nav hover

--- a/style.css
+++ b/style.css
@@ -123,13 +123,13 @@ header {
 
 /* Main Navigtaton Menu */
 .main-nav {
-	list-style: none;
 	float: left;
-	font: 1.2rem "Open Sans";
-	padding-top: 50px;
-	text-transform: uppercase;
 	font-weight: 200;
+	font: 1.2rem "Open Sans";
+	list-style: none;
+	padding-top: 50px;
 	position: relative;
+	text-transform: uppercase;
 }
 
 .main-nav > li{
@@ -138,13 +138,18 @@ header {
 }
 
 .main-nav > li a {
-	display: block;
-	width: 120px;
-	font-family: sans-serif; 
-	text-decoration: none;
 	color: #a0a0a0; 
-	padding: 6px 1px 6px 1px;
+	display: block;
+	font-family: sans-serif; 
+	padding: 6px 1px 2px 1px;
 	text-align: center;
+	text-decoration: none;
+	width: 120px;
+}
+
+.main-nav > li > a {
+	border-top: 1px solid white;
+	padding-bottom: 12px;
 }
 
 .main-nav > li a:link,
@@ -159,12 +164,13 @@ header {
 
 .sub-nav {
 	background: #FCFCFC;
-	width: 920px;
-	height: 240px;
+	box-shadow: 3px 3px 3px 0px grey;
 	display: none;
-	position: absolute;
+	height: 240px;
 	left:-190px;
+	position: absolute;
 	top: 82px;
+	width: 920px;
 	z-index: 1;
 }
 
@@ -241,7 +247,11 @@ header {
 	border-top: 1px solid #D5D5D5;
 	border-left: 1px solid #D5D5D5;
 	border-right: 1px solid #D5D5D5;
-	padding-bottom: 20px;
+	padding-bottom: 12px;
+}
+
+.main-nav > li:hover > a {
+	width: 118px;
 }
 
 
@@ -335,7 +345,7 @@ input[type="search"] {
 
 .carousel-block h3 {
 	font-weight: 100;
-	margin: 10px 0;
+	margin: 2px 0;
 }
 
 .carousel {
@@ -353,10 +363,6 @@ input[type="search"] {
 	content: " ";
 }
 
-.bg-image-wrapper {
-
-}
-
 .carousel-bg-image {
 	height: 550px;
 	position: center;
@@ -371,7 +377,6 @@ ol.carousel-nav {
 	margin-top: 20px;
 	list-style: none;
 	position: absolute;
-	/*float: left;*/
 	bottom: 234px;
 	left: 240px;
 }
@@ -400,7 +405,6 @@ ol.carousel-slides {
 	height: 12px;
 	display: inline-block;
 }
-
 
 
 
